creusot/tests/should_fail/prusti/logic/ghost.stderr
error: final operator
 --> ghost.rs:6:6
  |
6 |     *x
  |      ^
  |
note: the lint level is defined here
 --> ghost.rs:4:1
  |
4 | #[logic('x)]
  | ^^^^^^^^^^^^
  = note: this error originates in the attribute macro `logic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

